// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annotation generation (XML) example 1`] = `
"<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"/incident/$metadata\\">
        <edmx:Include Namespace=\\"IncidentService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"sap.fe.demo\\">
            <Annotations Target=\\"IncidentService.Individual\\">
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"createdAt\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"createdAt\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"createdBy\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"createdBy\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"modifiedAt\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"modifiedAt\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"modifiedBy\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"modifiedBy\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"businessPartnerID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"businessPartnerID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"addressID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"addressID\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup\\"/>
                        </Record>
                    </Collection>
                </Annotation>
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"createdAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"createdAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"createdBy\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"createdBy\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedBy\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedBy\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"businessPartnerID\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"businessPartnerID\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`annotation generation (XML) generate facets 1`] = `
"<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"/incident/$metadata\\">
        <edmx:Include Namespace=\\"IncidentService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"sap.fe.demo\\">
            <Annotations Target=\\"IncidentService.Individual\\">
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"createdAt\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"createdAt\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"createdBy\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"createdBy\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"modifiedAt\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"modifiedAt\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"modifiedBy\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"modifiedBy\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"businessPartnerID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"businessPartnerID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"addressID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"addressID\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`annotation generation (XML) generate line items 1`] = `
"<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"/incident/$metadata\\">
        <edmx:Include Namespace=\\"IncidentService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"sap.fe.demo\\">
            <Annotations Target=\\"IncidentService.Incidents\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"createdAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"createdAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"createdBy\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"createdBy\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedBy\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedBy\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"identifier\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"identifier\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`annotation generation (XML) generate line items hidden 1`] = `
"<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"/incident/$metadata\\">
        <edmx:Include Namespace=\\"IncidentService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"sap.fe.demo\\">
            <Annotations Target=\\"IncidentService.IncidentFlow\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"createdAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"createdAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedAt\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedAt\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"modifiedBy\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"modifiedBy\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"processStep\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"processStep\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"stepStatus\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"stepStatus\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`annotation generation (XML) generate value helps 1`] = `
"<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.Common.v1\\" Alias=\\"Common\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Communication.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.Communication.v1\\" Alias=\\"Communication\\" />
    </edmx:Reference>
    <edmx:Reference Uri=\\"/incident/$metadata\\">
        <edmx:Include Namespace=\\"IncidentService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"sap.fe.demo\\">
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;
